--- a/challenge-21/index.html
+++ b/challenge-21/index.html
@@ -8,10 +8,10 @@
 <body>
   <label for="">Cronômetro</label>
   <input type="text" data-js="data" value="0">
-  <input type="button" value="Start" data-js="start">
-  <input type="button" value="Stop" data-js="stop">
-  <input type="button" value="Reset" data-js="reset">
-
+  <button data-js="start">Start</button>
+  <button data-js="stop">Stop</button>
+  <button data-js="reset">Reset</button>
+  
   <script src="./challenge-21.js"></script>
 </body>
 </html>
